--- a/Microsoft.Avro.Core/Microsoft.Avro.Core.csproj
+++ b/Microsoft.Avro.Core/Microsoft.Avro.Core.csproj
@@ -1,17 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <AssemblyName>Microsoft.Avro.Core</AssemblyName>
-    <Description>Microsoft Avro library for .NET Standard 2.0 and .NET Framework 4.5.1.</Description>
-    <PackageTags>Avro  Serialization Json Binary Schema</PackageTags>
-    <TargetFrameworks>netstandard2.0;net451</TargetFrameworks>
-  </PropertyGroup>
-  <Import Project="..\build.props"/>
-  <ItemGroup>
-      <PackageReference Include="Newtonsoft.Json" Version="$(NewtonsoftVersion)"/>
-  </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Runtime.Serialization" />
-  </ItemGroup>
+	<PropertyGroup>
+		<AssemblyName>Microsoft.Avro.Core</AssemblyName>
+		<PackageId>Microsoft.Avro.Standard</PackageId>
+		<Description>Microsoft Avro library for .NET Standard 2.0</Description>
+		<PackageTags>Avro  Serialization Json Binary Schema</PackageTags>
+		<TargetFrameworks>netstandard2.0</TargetFrameworks>
+		<Authors>Wikiled</Authors>
+		<Description>Microsoft Avro library</Description>
+		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+		<ProjectUrl>https://github.com/AndMu/microsoft-avro</ProjectUrl>
+		<tags>avro, standard</tags>
+		<LangVersion>latest</LangVersion>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+	</ItemGroup>
+
 </Project>
