--- a/Microsoft.Avro.Tools/Microsoft.Avro.Tools.csproj
+++ b/Microsoft.Avro.Tools/Microsoft.Avro.Tools.csproj
@@ -2,13 +2,10 @@
   <PropertyGroup>
     <AssemblyName>Microsoft.Avro.Tools</AssemblyName>
     <OutputType>Exe</OutputType>
-    <Description>Microsoft Avro Tools for .NET Core 2.0 and .NET Framework 4.5.1.</Description>
+    <Description>Microsoft Avro Tools</Description>
     <PackageTags>Avro Serialization Json Binary Schema</PackageTags>
-    <TargetFrameworks>netcoreapp2.0;net451</TargetFrameworks>
-	<RuntimeIdentifiers>win7-x64;ubuntu.16.04-x64</RuntimeIdentifiers>
-    <RuntimeIdentifier>win7-x64</RuntimeIdentifier>
+    <TargetFrameworks>net6.0</TargetFrameworks>
   </PropertyGroup>
-  <Import Project="..\build.props" />
   <ItemGroup>
     <ProjectReference Include="..\Microsoft.Avro.Core\Microsoft.Avro.Core.csproj" />
   </ItemGroup>
