--- a/Microsoft.Avro.Tests/Microsoft.Avro.Tests.csproj
+++ b/Microsoft.Avro.Tests/Microsoft.Avro.Tests.csproj
@@ -1,37 +1,38 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <AssemblyName>Microsoft.Avro.Tests</AssemblyName>
-	  <TargetFrameworks>net6.0</TargetFrameworks>
-    <Description>Tests Microsoft Avro libraries</Description>
-    <PackageTags>Avro</PackageTags>
-  </PropertyGroup>
-  <ItemGroup>
-    <Compile Remove="CodeGenTests\CodeGenerationTests.cs" />
-    <Compile Remove="CodeGenTests\CodeGenerationVerificationSteps.cs" />
-    <Compile Remove="CodeGenTests\GenerationVerification.feature.cs" />
-    <Compile Remove="SchemaTests\ReflectionSchemaBuilderTests.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Apache.Avro" Version="1.11.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
-    <PackageReference Include="protobuf-net" Version="3.0.101" />
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.core" Version="2.4.1" />
-    <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
-    <PackageReference Include="xunit.extensibility.execution" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="SpecFlow.NetCore" Version="1.3.5" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Microsoft.Avro.Core\Microsoft.Avro.Core.csproj" />
-    <ProjectReference Include="..\Microsoft.Avro.Tools\Microsoft.Avro.Tools.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
-  </ItemGroup>
+	<PropertyGroup>
+		<AssemblyName>Microsoft.Avro.Tests</AssemblyName>
+		<TargetFrameworks>net6.0</TargetFrameworks>
+		<Description>Tests Microsoft Avro libraries</Description>
+		<PackageTags>Avro</PackageTags>
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
+	<ItemGroup>
+		<Compile Remove="CodeGenTests\CodeGenerationTests.cs" />
+		<Compile Remove="CodeGenTests\CodeGenerationVerificationSteps.cs" />
+		<Compile Remove="CodeGenTests\GenerationVerification.feature.cs" />
+		<Compile Remove="SchemaTests\ReflectionSchemaBuilderTests.cs" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Apache.Avro" Version="1.11.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+		<PackageReference Include="protobuf-net" Version="3.0.101" />
+		<PackageReference Include="xunit" Version="2.4.1" />
+		<PackageReference Include="xunit.core" Version="2.4.1" />
+		<PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
+		<PackageReference Include="xunit.extensibility.execution" Version="2.4.1" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="SpecFlow.NetCore" Version="1.3.5" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Microsoft.Avro.Core\Microsoft.Avro.Core.csproj" />
+		<ProjectReference Include="..\Microsoft.Avro.Tools\Microsoft.Avro.Tools.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+		<Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
+	</ItemGroup>
 </Project>
